--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="bio">Ryan Nam, age 23, is a full-stack developer who graduated from Whitman College with a bachelor's in psychology.</p>
                 <p>As of now, his current whereabouts is located in Clyde Hill, Washington.</p>
                 <p>It is apparent that his sudden change in career stems from his obsession to decipher problems as both a technician and an artist. </p>
-                <p>Hobbies seem to include keeping tabs with all Seattle-based sports teams. Intriguing but emoionally draining.</p>
+                <p>Hobbies seem to include keeping tabs with all Seattle-based sports teams. Intriguing but emotionally draining.</p>
                 <div class="image-box">
                     <img class="logo" src="images/blueslogo.png" alt="blues">
                     <img class="logo" src="images/Seahawks.png" alt="seahawks">
