--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a class="head" href="#">About</a>
         <a class="head" href="#">Projects</a>
         <a class="head" href="#">Qualifications</a>
+        <a class="head" href="#" onclick="press8()">Home</a>
     </div>
 
     <!-- My name and intro box -->
