--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <!-- nav-bar containing the main contents -->
     <div class="nav-bar">
+        <a class="head" href="#" onclick="press8()"><span>Home</span></a>
         <a class="head" href="#">About</a>
         <a class="head" href="#">Projects</a>
         <a class="head" href="#">Qualifications</a>
-        <a class="head" href="#" onclick="press8()">Home</a>
     </div>
 
     <!-- My name and intro box -->
@@ -43,6 +43,10 @@
                 onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
             <p class="classified">Classified Skillset</p>
         </button>
+        <button onclick="press9()" class="file reason"><img onmouseover="scale(this, 1.25)"
+            onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
+        <p class="classified">Classified Motive</p>
+    </button>
 
     <!-- This is the about page that covers my background, contact, and education -->
     </div>
@@ -99,7 +103,7 @@
     </div>
 
     <!-- This page covers my motivations for doing code -->
-    <div class="reason box">
+    <div class="Explain box">
         <h2>Why Code?</h2>
         <p class="arrow">Click this</p>
         <button class="envelope" onclick="press7()"><img class="envelope" src="images/Circle-icons-mail.svg.png"
