--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 
     <!-- File icon that directs you to one of main pages -->
     <div class="file-box">
-        <button onclick="press()" class="file background"><img onmouseover="scale(this, 1.25)"
+        <button onclick="press()" class="file background"><img class="sizing" onmouseover="scale(this, 1.25)"
                 onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
             <p class="classified">Classified Background</p>
         </button>
-        <button onclick="press2()" class="file projects"><img onmouseover="scale(this, 1.25)"
+        <button onclick="press2()" class="file projects"><img class="sizing" onmouseover="scale(this, 1.25)"
                 onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
             <p class="classified">Classified Projects</p>
         </button>
-        <button onclick="press3()" class="file skillset"><img onmouseover="scale(this, 1.25)"
+        <button onclick="press3()" class="file skillset"><img class="sizing" onmouseover="scale(this, 1.25)"
                 onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
             <p class="classified">Classified Skillset</p>
         </button>
-        <button onclick="press9()" class="file reason"><img onmouseover="scale(this, 1.25)"
+        <button onclick="press9()" class="file reason"><img class="sizing" onmouseover="scale(this, 1.25)"
             onmouseleave="scale(this, 1)" src="images/OneDrive_Folder_Icon.svg.png" alt="file-icon">
         <p class="classified">Classified Motive</p>
     </button>
